load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "plugin.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/constant:go_default_library",
        "//pkg/logger/technical:go_default_library",
        "//service/task-service/infrastructure/grpc:go_default_library",
        "//service/task-service/interface/proto:go_default_library",
        "//service/task-service/pkg/config:go_default_library",
        "//service/task-service/pkg/registry:go_default_library",
        "//vendor/github.com/micro/cli/v2:go_default_library",
        "//vendor/github.com/micro/go-micro/v2:go_default_library",
        "//vendor/github.com/micro/go-plugins/registry/kubernetes/v2:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_binary(
    name = "task-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
