load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["technical.go"],
    importpath = "github.com/kzmake/micro-kit/pkg/logger/technical",
    visibility = ["//visibility:public"],
    deps = ["//pkg/logger:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["technical_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/logger:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
