load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "log.go",
    ],
    importpath = "github.com/kzmake/micro-kit/pkg/wrapper/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger/technical:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/client:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/metadata:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/server:go_default_library",
    ],
)
