load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "code.go",
        "errors.go",
        "with_code.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service/domain/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cockroachdb/errors:go_default_library",
        "//vendor/github.com/cockroachdb/errors/markers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errors_test.go",
        "with_code_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)
