load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "id.go",
        "task.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service/domain/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//service/task-service/domain/aggregate:go_default_library",
        "//service/task-service/domain/vo:go_default_library",
    ],
)
