load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/kzmake/micro-kit/service/task-service/infrastructure/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/wrapper/logger:go_default_library",
        "//vendor/github.com/micro/go-micro/v2:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/server:go_default_library",
    ],
)
