load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "schema.go",
        "task.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service/infrastructure/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//service/task-service/domain/aggregate:go_default_library",
        "//service/task-service/domain/errors:go_default_library",
        "//service/task-service/domain/repository:go_default_library",
        "//service/task-service/domain/vo:go_default_library",
        "//vendor/github.com/go-sql-driver/mysql:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/jinzhu/gorm/dialects/mysql:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)
