load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "entity.pb.go",
        "entity.pb.micro.go",
        "entity.pb.validate.go",
        "service.pb.go",
        "service.pb.micro.go",
        "service.pb.validate.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service/interface/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/envoyproxy/protoc-gen-validate/validate:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/timestamp:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/wrappers:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/api:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/client:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/server:go_default_library",
        "//vendor/google.golang.org/protobuf/reflect/protoreflect:go_default_library",
        "//vendor/google.golang.org/protobuf/runtime/protoimpl:go_default_library",
    ],
)
