load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "create_task.go",
        "delete_task.go",
        "get_task.go",
        "list_tasks.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task-service/usecase/interactor",
    visibility = ["//visibility:public"],
    deps = [
        "//service/task-service/domain/aggregate:go_default_library",
        "//service/task-service/domain/repository:go_default_library",
        "//service/task-service/domain/vo:go_default_library",
        "//service/task-service/usecase/business:go_default_library",
        "//service/task-service/usecase/port:go_default_library",
        "//vendor/github.com/oklog/ulid/v2:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)
