load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "plugin.go",
    ],
    importpath = "github.com/kzmake/micro-kit/service/task/cmd/srv",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/logger/technical:go_default_library",
        "//service/task/infrastructure/grpc:go_default_library",
        "//service/task/interface/proto:go_default_library",
        "//service/task/pkg/config:go_default_library",
        "//service/task/pkg/registry:go_default_library",
        "//vendor/github.com/micro/go-plugins/registry/consul/v2:go_default_library",
        "//vendor/github.com/micro/go-plugins/registry/kubernetes/v2:go_default_library",
        "//vendor/github.com/sarulabs/di/v2:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_binary(
    name = "srv",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
