load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/kzmake/micro-kit/service/task/infrastructure/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/constant:go_default_library",
        "//pkg/wrapper/logger:go_default_library",
        "//service/task/interface/proto:go_default_library",
        "//service/task/pkg/config:go_default_library",
        "//service/task/pkg/registry:go_default_library",
        "//vendor/github.com/micro/cli/v2:go_default_library",
        "//vendor/github.com/micro/go-micro/v2:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/registry:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/registry/etcd:go_default_library",
        "//vendor/github.com/micro/go-micro/v2/server:go_default_library",
    ],
)
