load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create_task.go"],
    importpath = "github.com/kzmake/micro-kit/service/task/usecase/interactor",
    visibility = ["//visibility:public"],
    deps = [
        "//service/task/domain/aggregate:go_default_library",
        "//service/task/domain/vo:go_default_library",
        "//service/task/usecase/port:go_default_library",
        "//vendor/github.com/oklog/ulid/v2:go_default_library",
    ],
)
